--- a/ADR-001.md
+++ b/ADR-001.md
@@ -1,4 +1,4 @@
-# [ADR-001: Data Security and Privacy]
+# ADR-001: Data Security and Privacy
 
 ## Context
 FinanceHero, as a responsible aggregator of sensitive financial data, and is committed to protecting user privacy and ensuring data security. This ADR outlines our approach to safeguarding user information.
@@ -25,3 +25,5 @@ User trust is crucial for FinanceHero's success. Robust security measures:
 Accepted
 
 ## References
+- https://en.wikipedia.org/wiki/California_Privacy_Rights_Act
+- https://auth0.com/docs/secure/multi-factor-authentication/authenticate-using-ropg-flow-with-mfa
