--- a/ADR-004.md
+++ b/ADR-004.md
@@ -1,19 +1,32 @@
-# [ADR-004: Bank Integration]
+# ADR-004: Open API Integration
 
 ## Context
-[Describe the context in which this decision is made. This could include background information, requirements, constraints, or any other relevant details.]
+FinanceHero needs to connect with various financial institutions and platforms to seamlessly aggregate user data. This ADR outlines the approach to facilitate secure data exchange.
 
 ## Decision
-[Describe the decision that has been made. Be clear and concise about what is being decided and why it is being chosen.]
+We will develop open APIs to enable secure data aggregation from various financial institutions and platforms. This includes:
+
+- **Standardized API protocols**: Adhere to standardized API protocol like Open Banking APIs or Plaid to ensure compatibility.
+- **Secure Authentication**: Implement secure authentication mechanism(e.g. OAuth) for data access authorization.
+- **Partnerships**: Explore partnerships with financial institution for seamless data exchange and potential co-branding opportunities.
 
 ## Rationale
-[Explain the reasoning behind the decision. This could include factors such as trade-offs, risks, benefits, alignment with goals, or any other considerations that influenced the decision.]
+Open APIs offer:
+- **Ease of Integration**: Standardized protocols facilitate integration with a wide range of financial institutions.
+- **Security**: Secure Authentication mechanism safeguard userdata during data exchange.
+- **Enhanced User Experience**: Seamless data aggregation provides a holistic view of user finances.
+
+Partnership with financial institutions:
+- **Expand User Base**: Leverage partner network to reach a wider audience
+- **Increase data Availability**: Gain access to additional financial data sources.
+- **Potential Revenue Streams**: Explore co-branding and referral opportunities with partners.
 
 ## Consequences
-[Discuss the potential consequences of the decision, both positive and negative. This could include impacts on stakeholders, future flexibility, technical debt, or any other relevant outcomes.]
+- **Positive**: Improved user experience, richer data insights. potential for additional revenue streams.
+- **Negative**: Reliance on third-party APIs for data accessibility, potential integration challenges with specific institutions.
 
 ## Status
-[Indicate the status of the decision, such as "Accepted", "Superseded", "Rejected", or any other applicable status.]
+Accepted
 
 ## References
-[Include any references or links to additional information that informed the decision-making process, such as documents, discussions, or external sources.]
+- https://plaid.com/resources/open-finance/open-banking-api/
