--- a/ADR-002.md
+++ b/ADR-002.md
@@ -1,19 +1,32 @@
-# [ADR-002: Backend Framework]
+# ADR-002: Machine Learning and Artificial Intelligence for Personalized Finance
 
 ## Context
-[Describe the context in which this decision is made. This could include background information, requirements, constraints, or any other relevant details.]
+FinanceHero aims to personalize the user experience by analyzing financial data and providing tailored recommendations. This ADR outlines the approach to leverage Machine Learning (ML) and Artificial Intelligence (AI) for this purpose.
 
 ## Decision
-[Describe the decision that has been made. Be clear and concise about what is being decided and why it is being chosen.]
+We will integrate ML and AI models to power the Personal Finance Assistant (PFA) and offer personalized financial insights. This include:
+
+- **Specialized Learning Models**: Utilizes supervised learning models for:
+    - Expenses categorization to automatically categorize transactions.
+    - Transaction prediction to forecast future income and expenses.
+    - Goal setting to suggest achievable financial goals based on user data.
+- **Natural Language Processing(NLP)**: Implement NLP to:
+    - Understand user queries in natural language for interation with PFA.
+    - Generate coversational responses from the PFA for a more engaging experience.
 
 ## Rationale
-[Explain the reasoning behind the decision. This could include factors such as trade-offs, risks, benefits, alignment with goals, or any other considerations that influenced the decision.]
+ML and AI offers:
+- **Personalized Insights**: Analyze user data to provide recommendations on spending habits, budgeting strategies, and investiment opportunities
+- **Predictive Capabilities**: Predict future financial trends to help users make informed decisions.
+- **Enhanced User Experience**: Enable natural language interaction through PFA, making financial management more accessible.
 
 ## Consequences
-[Discuss the potential consequences of the decision, both positive and negative. This could include impacts on stakeholders, future flexibility, technical debt, or any other relevant outcomes.]
+- **Positive**: Personalized recommendations, improved financial literacy, increased user engagement.
+- **Negative**: Requires ongoing investment in data science expertise and model development. Potential for biases in model output if training data is skewed.
 
 ## Status
-[Indicate the status of the decision, such as "Accepted", "Superseded", "Rejected", or any other applicable status.]
+Accepted
 
 ## References
-[Include any references or links to additional information that informed the decision-making process, such as documents, discussions, or external sources.]
+- Scikit-learn (Machine Learning library): https://scikit-learn.org/stable/
+- TensorFlow (Machine Learning framework): https://www.tensorflow.org/
