--- a/ADR-003.md
+++ b/ADR-003.md
@@ -1,19 +1,36 @@
-# [ADR-003: Receipt Storage]
+# ADR-003: Cloud-Based Receipt Storage with Security Considerations
 
 ## Context
-[Describe the context in which this decision is made. This could include background information, requirements, constraints, or any other relevant details.]
+FinanceHero aims to offer a receipt tracking feature where users can store receipts securely. This ADR explores leveraging existing cloud storage platforms (e.g., Google Drive, Dropbox, iCloud) for receipt storage while considering security implications.
 
 ## Decision
-[Describe the decision that has been made. Be clear and concise about what is being decided and why it is being chosen.]
+We will not directly store receipts within the FinanceHero application. Instead, we will integrate with existing cloud storage platforms to allow users to:
+
+- **Link Cloud Storage Accounts**: Users can securely connect their preferred cloud storage provider (e.g., Google Drive, Dropbox, iCloud) to FinanceHero.
+- **Upload Receipts**: Users can upload receipt images or PDFs directly from their devices or linked cloud storage accounts.
+- **Access and Manage Receipts**: FinanceHero will provide functionalities to view, search, and organize receipts stored within the linked cloud storage platform.
 
 ## Rationale
-[Explain the reasoning behind the decision. This could include factors such as trade-offs, risks, benefits, alignment with goals, or any other considerations that influenced the decision.]
+Leveraging existing cloud storage offers several advantages:
+- **Security**: Cloud storage providers typically employ robust security measures like encryption and access controls,mitigating the risk of data breaches within the FinanceHero app itself.
+- **User Choice and Familiarity**: Users can choose their preferred cloud storage platform, leveraging existing security settings and access controls they're already familiar with.
+-- **Reduced Storage Burden**: FinanceHero avoids the burden of managing user data storage and associated costs.
+
+## Security Considerations
+While leveraging cloud storage offers benefits, security concerns need to be addressed:
+
+- **User Responsibility**: Users are responsible for maintaining storage security practices within their chosen cloud storage platform(e.g., enabling two-factor authentication, using strong passwords).
+- **Data Access**: FinanceHero will only access receipt metadata (filenames, timestamps) for organization purposes, not the actual receipt content.
+- **Data Visibility**: Users should be aware that cloud storage providers may have access to stored data depending on their terms of service.
 
 ## Consequences
-[Discuss the potential consequences of the decision, both positive and negative. This could include impacts on stakeholders, future flexibility, technical debt, or any other relevant outcomes.]
+- **Positive**: Leverages existing security infrastructure of cloud storage providers, reduces storage burden for FinanceHero, and offers user choice.
+- **Negative**: Relies on user practices for cloud storage security, limited control over actual receipt content storage by FinanceHero.
 
 ## Status
-[Indicate the status of the decision, such as "Accepted", "Superseded", "Rejected", or any other applicable status.]
+Proposed
 
-## References
-[Include any references or links to additional information that informed the decision-making process, such as documents, discussions, or external sources.]
+## Next Steps
+- Conduct a security risk assessment of this approach, considering user data privacy and potential access by cloud storage providers.
+- Explore potential API integrations with specific cloud storage platforms for seamless user experience.
+- Develop clear communication to users regarding data storage practices and security considerations.
